--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
  	x: getRandomNumber(width),
  	y: getRandomNumber(height)
  }
+
+ $('#map').click(function(event){
+
+ });
+ var clicks = 0;
+ function getDistance (event, target){
+ 	var diffX = event.offsetX - trarget.x;
+ 	var diffY = event.offsetY - target.y;
+ 	return Math.sqrt((diffX * diffX) + (diffY * diffY));
+ };
  </script>
 </body>
 </html>
